--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -1,108 +1,108 @@
-# # Sample workflow for building and deploying a Jekyll site to GitHub Pages
-# name: Deploy Jekyll with GitHub Pages dependencies preinstalled
-
-# on:
-#   # Runs on pushes targeting the default branch
-#   push:
-#     branches: ["main"]
-
-#   # Allows you to run this workflow manually from the Actions tab
-#   workflow_dispatch:
-
-# # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-# permissions:
-#   contents: read
-#   pages: write
-#   id-token: write
-
-# # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
-# concurrency:
-#   group: "pages"
-#   cancel-in-progress: false
-
-# jobs:
-#   # Build job
-#   build:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Checkout
-#         uses: actions/checkout@v4
-#       - name: Setup Pages
-#         uses: actions/configure-pages@v5
-#       - name: Build with Jekyll
-#         uses: actions/jekyll-build-pages@v1
-#         with:
-#           source: ./
-#           destination: ./_site
-#       - name: Upload artifact
-#         uses: actions/upload-pages-artifact@v3
-
-#   # Deployment job
-#   deploy:
-#     environment:
-#       name: github-pages
-#       url: ${{ steps.deployment.outputs.page_url }}
-#     runs-on: ubuntu-latest
-#     needs: build
-#     steps:
-#       - name: Deploy to GitHub Pages
-#         id: deployment
-#         uses: actions/deploy-pages@v4
-
-
-name: Deploy Static HTML to GitHub Pages
+# Sample workflow for building and deploying a Jekyll site to GitHub Pages
+name: Deploy Jekyll with GitHub Pages dependencies preinstalled
 
 on:
+  # Runs on pushes targeting the default branch
   push:
     branches: ["main"]
 
+  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
   group: "pages"
   cancel-in-progress: false
 
 jobs:
-  build-and-deploy:
+  # Build job
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Install Pandoc
-        run: sudo apt-get install -y pandoc
-
-      - name: Convert README.md to index.html
-        run: |
-          mkdir -p site
-          pandoc README.md -f markdown -t html -s -o site/index.html
-
-      - name: Download Custom CSS
-        run: curl -o site/style.css https://ramtinmoslemi.github.io/style.css
-
-      - name: Add Meta and Container Div
-        run: |
-          sed -i '1s;^;<link rel="stylesheet" href="style.css">\n<meta name="viewport" content="width=device-width, initial-scale=1.0">\n<div class="container">;' site/index.html
-          echo '</div>' >> site/index.html
-
-      - name: Upload to GitHub Pages
-        uses: actions/upload-pages-artifact@v3
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+      - name: Build with Jekyll
+        uses: actions/jekyll-build-pages@v1
         with:
-          path: ./site
+          source: ./
+          destination: ./_site
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
 
+  # Deployment job
   deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    needs: build-and-deploy
+    needs: build
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+
+
+# name: Deploy Static HTML to GitHub Pages
+
+# on:
+#   push:
+#     branches: ["main"]
+
+#   workflow_dispatch:
+
+# permissions:
+#   contents: read
+#   pages: write
+#   id-token: write
+
+# concurrency:
+#   group: "pages"
+#   cancel-in-progress: false
+
+# jobs:
+#   build-and-deploy:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout
+#         uses: actions/checkout@v4
+
+#       - name: Install Pandoc
+#         run: sudo apt-get install -y pandoc
+
+#       - name: Convert README.md to index.html
+#         run: |
+#           mkdir -p site
+#           pandoc README.md -f markdown -t html -s -o site/index.html
+
+#       - name: Download Custom CSS
+#         run: curl -o site/style.css https://ramtinmoslemi.github.io/style.css
+
+#       - name: Add Meta and Container Div
+#         run: |
+#           sed -i '1s;^;<link rel="stylesheet" href="style.css">\n<meta name="viewport" content="width=device-width, initial-scale=1.0">\n<div class="container">;' site/index.html
+#           echo '</div>' >> site/index.html
+
+#       - name: Upload to GitHub Pages
+#         uses: actions/upload-pages-artifact@v3
+#         with:
+#           path: ./site
+
+#   deploy:
+#     environment:
+#       name: github-pages
+#       url: ${{ steps.deployment.outputs.page_url }}
+#     runs-on: ubuntu-latest
+#     needs: build-and-deploy
+#     steps:
+#       - name: Deploy to GitHub Pages
+#         id: deployment
+#         uses: actions/deploy-pages@v4
